--- a/BlazorTraining/App.razor
+++ b/BlazorTraining/App.razor
@@ -1,7 +1,7 @@
 ﻿@using System.Reflection
 @using BlazorTraining.Shared.Tabs
 
-<Router AppAssembly="@typeof(App).Assembly" 
+<Router AppAssembly="@typeof(App).Assembly"
         AdditionalAssemblies="@loadedAssemblies">
     <Found Context="routeData">
         <MenuTabsRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
@@ -22,6 +22,7 @@
         typeof(SAB00700Front.SAB00700).Assembly,
         typeof(SAB00900Front.SAB00900).Assembly,
         typeof(SAB01300Front.SAB01300).Assembly,
-        typeof(SAB01400Front.SAB01400).Assembly
+        typeof(SAB01400Front.SAB01400).Assembly,
+        typeof(SAB00100Front.SAB00100).Assembly
     };
 }
