--- a/Front/Front/SAB00700Front/SAB00700.razor
+++ b/Front/Front/SAB00700Front/SAB00700.razor
@@ -12,7 +12,6 @@
             <R_GridColumns>
                 <R_GridTextColumn FieldName="CategoryID" HeaderText="Category Id"></R_GridTextColumn>
                 <R_GridTextColumn FieldName="CategoryName" HeaderText="Category Name"></R_GridTextColumn>
-                <R_GridTextColumn FieldName="Description"></R_GridTextColumn>
             </R_GridColumns>
         </R_Grid>
     </R_StackLayout>
@@ -90,4 +89,5 @@
              R_ServiceGetRecord="@Conductor_ServiceGetRecord"
              R_Validation="@Conductor_Validation"
              R_ServiceSave="@Conductor_ServiceSave"
-             R_ServiceDelete="@Conductor_ServiceDelete"></R_Conductor>
+             R_ServiceDelete="@Conductor_ServiceDelete" 
+             R_ConvertToGridEntity="@R_ConvertToGridEntity"></R_Conductor>
