--- a/SAB00100Front/SAB00110.razor
+++ b/SAB00100Front/SAB00110.razor
@@ -1,25 +1,29 @@
 ﻿@inherits R_Page
-@inject R_ILocalizer<SAB00100FrontResources.Resources_Dummy_Class> ILocalizer
+@inject R_ILocalizer<SAB00100FrontResources.Resources_Dummy_Class> _localizer
+@attribute [R_Page(Title = "Employee List")]
 
 <R_StackLayout>
-    <R_Grid @ref="@GridRef" 
-            DataSource="_viewModel.EmployeeList" 
-            R_ServiceGetListRecord="R_ServiceGetListRecord">
+    <R_Grid @ref="@GridRef"
+            DataSource="_viewModel.EmployeeList"
+            R_ServiceGetListRecord="R_ServiceGetListRecord"
+            Pageable
+            PageSize="5">
         <R_GridColumns>
             <R_GridNumericColumn FieldName="EmployeeID"
-                                 HeaderText="@ILocalizer["_EmployeeId"]">
+                                 HeaderText=@_localizer["_EmployeeID"]>
             </R_GridNumericColumn>
 
             <R_GridNumericColumn FieldName="FirstName"
-                                 HeaderText="@ILocalizer["_FirstName"]">
+                                 HeaderText=@_localizer["_FirstName"]>
             </R_GridNumericColumn>
 
             <R_GridNumericColumn FieldName="LastName"
-                                 HeaderText="@ILocalizer["_LastName"]">
+                                 HeaderText=@_localizer["_LastName"]>
             </R_GridNumericColumn>
         </R_GridColumns>
     </R_Grid>
-</R_StackLayout>
-@code {
 
-}
+    <R_ItemLayout xs="2">
+        <R_Button OnClick="Button_OnClickAsync">@_localizer["_SelectData"]</R_Button>
+    </R_ItemLayout>
+</R_StackLayout>
