--- a/Front/Front/SAB01300Front/SAB01300.razor
+++ b/Front/Front/SAB01300Front/SAB01300.razor
@@ -1,27 +1,29 @@
 ﻿@page "/SAB01300"
 @inherits R_Page
 
-<TelerikCard>
-    <CardBody>
-        <R_Grid @ref="@_gridRef"
-                DataSource="@ViewModel.CategoryList"
-                Pageable="true"
-                R_ConductorGridSource="@_conGridCategoryRef"
-                R_GridType="@R_eGridType.Original"
-                AllowAddNewRow="true"
-                AllowEditRow="true"
-                AllowDeleteRow="true"
-                R_ServiceGetListRecord="@GridCategory_ServiceGetListRecord">
-            <R_GridColumns>
-                <R_GridTextColumn FieldName="CategoryID" HeaderText="Category Id" R_EnableAdd></R_GridTextColumn>
-                <R_GridTextColumn FieldName="CategoryName" HeaderText="Category Name" R_EnableAdd R_EnableEdit></R_GridTextColumn>
-                <R_GridTextColumn FieldName="Description" R_EnableAdd R_EnableEdit></R_GridTextColumn>
-            </R_GridColumns>
-        </R_Grid>
-    </CardBody>
-</TelerikCard>
+<R_StackLayout Class="mb-4">
+    <R_Grid @ref="@_gridRef"
+            DataSource="@CategoryViewModel.CategoryList"
+            Pageable="true"
+            R_ConductorGridSource="@_conGridCategoryRef"
+            R_GridType="@R_eGridType.Original"
+            AllowAddNewRow="true"
+            AllowEditRow="true"
+            AllowDeleteRow="true"
+            R_ServiceGetListRecord="@GridCategory_ServiceGetListRecord">
+        <R_GridColumns>
+            <R_GridTextColumn FieldName="CategoryID" HeaderText="Category Id" R_EnableAdd></R_GridTextColumn>
+            <R_GridTextColumn FieldName="CategoryName" HeaderText="Category Name" R_EnableAdd R_EnableEdit></R_GridTextColumn>
+            <R_GridTextColumn FieldName="Description" R_EnableAdd R_EnableEdit></R_GridTextColumn>
+        </R_GridColumns>
+    </R_Grid>
+</R_StackLayout>
 
-<TelerikCard Width="50%">
+<R_StackLayout>
+    <h2>Product</h2>
+</R_StackLayout>
+
+<R_StackLayout Class="mb-3">
     <R_Grid @ref="@_gridProductRef"
             DataSource="@ProductViewModel.ProductList"
             Pageable="true"
@@ -33,77 +35,89 @@
             <R_GridTextColumn FieldName="ProductName" HeaderText="Product Name"></R_GridTextColumn>
         </R_GridColumns>
     </R_Grid>
-</TelerikCard>
+</R_StackLayout>
 
-<TelerikCard Width="50%">
-    <CardHeader>
-        <CardTitle>Product Detail</CardTitle>
-    </CardHeader>
+<R_StackLayout>
+    <h3>Product Detail</h3>
+</R_StackLayout>
 
-    <CardBody>
-        <R_Row>
-            <R_Column ColumnSize="6">
-                <R_Row>
-                    <R_Column ColumnSize="2">
-                        <R_Label>Product Id</R_Label>
-                    </R_Column>
-                    <R_Column ColumnSize="4">
-                        <R_NumericTextBox @bind-Value="@ProductViewModel.Data.ProductID"
-                                          R_ConductorSource="@_conductorProductRef"
-                                          Enabled="false"></R_NumericTextBox>
-                    </R_Column>
-                </R_Row>
+<R_StackLayout>
+    <R_StackLayout Row>
+        <R_ItemLayout xs="2">
+            <R_Label>Product Id</R_Label>
+        </R_ItemLayout>
 
-                <R_Row>
-                    <R_Column ColumnSize="2">
-                        <R_Label>Product Name</R_Label>
-                    </R_Column>
-                    <R_Column ColumnSize="4">
-                        <R_TextBox @bind-Value="@ProductViewModel.Data.ProductName"
-                                   R_ConductorSource="@_conductorProductRef"
-                                   R_EnableAdd="true"
-                                   R_EnableEdit="true"></R_TextBox>
-                    </R_Column>
-                </R_Row>
+        <R_ItemLayout xs="4">
+            <R_NumericTextBox @bind-Value="@ProductViewModel.Data.ProductID"
+                              R_ConductorSource="@_conductorProductRef"
+                              Enabled="false"></R_NumericTextBox>
+        </R_ItemLayout>
+    </R_StackLayout>
 
-                <R_Row>
-                    <R_Column ColumnSize="2">
-                        <R_Label>Unit Price</R_Label>
-                    </R_Column>
-                    <R_Column ColumnSize="4">
-                        <R_NumericTextBox @bind-Value="@ProductViewModel.Data.UnitPrice"
-                                          R_ConductorSource="@_conductorProductRef"
-                                          R_EnableAdd="true"
-                                          R_EnableEdit="true"></R_NumericTextBox>
-                    </R_Column>
-                </R_Row>
+    <R_StackLayout Row>
+        <R_ItemLayout xs="2">
+            <R_Label>Product Name</R_Label>
+        </R_ItemLayout>
 
-                <R_Row>
-                    <R_Column ColumnSize="2">
-                        <R_Label>Discontinued</R_Label>
-                    </R_Column>
-                    <R_Column ColumnSize="4">
-                        <R_CheckBox @bind-Value="@ProductViewModel.Data.Discontinued"
-                                    R_ConductorSource="@_conductorProductRef"
-                                    R_EnableAdd="true"
-                                    R_EnableEdit="true"></R_CheckBox>
-                    </R_Column>
-                </R_Row>
-            </R_Column>
-        </R_Row>
-    </CardBody>
+        <R_ItemLayout xs="4">
+            <R_TextBox @bind-Value="@ProductViewModel.Data.ProductName"
+                       R_ConductorSource="@_conductorProductRef"
+                       R_EnableAdd="true"
+                       R_EnableEdit="true"></R_TextBox>
+        </R_ItemLayout>
+    </R_StackLayout>
 
-    <CardActions>
-        <R_AddButton R_Conductor="@_conductorProductRef"></R_AddButton>
-        <R_EditButton R_Conductor="@_conductorProductRef"></R_EditButton>
-        <R_DeleteButton R_Conductor="@_conductorProductRef"></R_DeleteButton>
-        <R_SaveButton R_Conductor="@_conductorProductRef"></R_SaveButton>
-        <R_CancelButton R_Conductor="@_conductorProductRef"></R_CancelButton>
-    </CardActions>
-</TelerikCard>
+    <R_StackLayout Row>
+        <R_ItemLayout xs="2">
+            <R_Label>Unit Price</R_Label>
+        </R_ItemLayout>
+
+        <R_ItemLayout xs="4">
+            <R_NumericTextBox @bind-Value="@ProductViewModel.Data.UnitPrice"
+                              R_ConductorSource="@_conductorProductRef"
+                              R_EnableAdd="true"
+                              R_EnableEdit="true"></R_NumericTextBox>
+        </R_ItemLayout>
+    </R_StackLayout>
+
+    <R_StackLayout Row>
+        <R_ItemLayout xs="2">
+            <R_Label>Discontinued</R_Label>
+        </R_ItemLayout>
+
+        <R_ItemLayout xs="4">
+            <R_CheckBox @bind-Value="@ProductViewModel.Data.Discontinued"
+                        R_ConductorSource="@_conductorProductRef"
+                        R_EnableAdd="true"
+                        R_EnableEdit="true"></R_CheckBox>
+        </R_ItemLayout>
+    </R_StackLayout>
+
+    <R_StackLayout Row>
+        <R_ItemLayout xs="2">
+            <R_AddButton R_Conductor="@_conductorProductRef"></R_AddButton>
+        </R_ItemLayout>
+
+        <R_ItemLayout xs="2">
+            <R_EditButton R_Conductor="@_conductorProductRef"></R_EditButton>
+        </R_ItemLayout>
+
+        <R_ItemLayout xs="2">
+            <R_DeleteButton R_Conductor="@_conductorProductRef"></R_DeleteButton>
+        </R_ItemLayout>
+
+        <R_ItemLayout xs="2">
+            <R_SaveButton R_Conductor="@_conductorProductRef"></R_SaveButton>
+        </R_ItemLayout>
+
+        <R_ItemLayout xs="2">
+            <R_CancelButton R_Conductor="@_conductorProductRef"></R_CancelButton>
+        </R_ItemLayout>
+    </R_StackLayout>
+</R_StackLayout>
 
 <R_ConductorGrid @ref="@_conGridCategoryRef"
-                 R_ViewModel="@ViewModel"
+                 R_ViewModel="@CategoryViewModel"
                  R_IsHeader
                  R_Display="@Grid_Display"
                  R_ServiceGetRecord="@Grid_ServiceGetRecord"
